All data pertaining to city and country generated

--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -17,13 +17,14 @@
             width : 36px;
             height : 36px;
             border-radius: 5px;
-            background: #fff;
+            background-color: #fff;
             color: gray;
             padding-left: 5px;
         }
     </style>
    
 </style>
+
 
    <div id="map" >
   
@@ -45,8 +46,7 @@
         <h4 class="modal-title">Modal Header</h4>
       </div>
       <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
+     </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
