--- a/app/views/data-connect/data-connect-modal.html
+++ b/app/views/data-connect/data-connect-modal.html
@@ -62,7 +62,7 @@
 										<i class="fa fa-plus"></i> Add rule
 									</div>
 									<button type="submit" class="btn btn-primary">Confirm</button>
-									<button ng-click="toggleAddForm()" type="button" class="btn btn-default">Cancel</button>
+									<button ng-click="toggleAddForm()" type="button" class="btn btn-info">Cancel</button>
 									<a type="button" class="btn btn-danger" ng-href="/addConnection" target="_blank">Add source in other format</a>
 								</form>
 							</div>
@@ -78,7 +78,7 @@
 									<div class="col-md-2">Lastest update</div>
 									<div class="col-md-1">Messages</div>
 								</div>
-							<li ng-repeat="item in dataSourceItems">
+							<li ng-repeat="item in dataSourceItems" ng-click="showRowDetail($event)">
 								<div class="row" ng-class-odd="'odd'">
 									<div class="col-md-4"><a ng-href="{{item.source_url}}" target="_blank">{{item.source_url}}</a></div>
 									<div class="col-md-2">{{item.source_type}}</div>
@@ -86,6 +86,26 @@
 									<div class="col-md-2" am-time-ago="item.created_at"></div>
 									<div class="col-md-2" am-time-ago="item.last_modified"></div>
 									<div class="col-md-1">{{item.imported.length}}</div>
+								</div>
+								<div class="detail" ng-click="$event.stopPropagation();">
+									<div ng-repeat="toEditItem in dataSourceEditableItems">
+										<div class="row">
+											<div class="col-md-2">
+												<label for="{{toEditItem.field}}">{{toEditItem.label}}</label>
+											</div>
+											<div class="col-md-10">
+												<input type="text" ng-disabled="!item.editing" value="{{item[toEditItem.field]}}"/>
+											</div>
+										</div>
+									</div>
+
+									<div class="row detailButtonPanel">
+										<div class="col-md-12">
+											<button id="saveButton" class="btn btn-info" ng-click="saveDataSource(item); " ng-show="item.editing">Save</button>
+											<button id="editButton" class="btn btn-info" ng-click="toggleEditDataSource($event, item); ">Edit</button>
+											<button id="deleteButton" class="btn btn-danger" ng-click="deleteDataSource(item);">Delete</button>
+										</div>
+									</div>
 								</div>
 							</li>
 							</ul>
