--- a/app/views/advancedsearch.html
+++ b/app/views/advancedsearch.html
@@ -15,6 +15,8 @@
 					<input class="field-value" ng-model="aSearch.negUnion" type="text"><br>
 					<span class="field-title">These hashtags</span>
 					<input class="field-value" ng-model="aSearch.hashtags" type="text"><br>
+					<span class="field-title profane-field-title">Remove profane results</span>
+					<span ng-click="advanced.toggleProfanity();"  class="profanity-checkbox"><i ng-show="advanced.removeProfane" class="fa fa-check"></i></span>
 
 					<!-- When possible, add written in language options -->
 				</div>
