--- a/app/views/analyze/analyze.html
+++ b/app/views/analyze/analyze.html
@@ -82,7 +82,8 @@
                                     <div class="col-xs-4">
                                         <div class="row">
                                           <center><h3>Country wise Followers</h3></center>
-                                            <canvas id="pie" class="chart chart-pie" data="countryvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="countrylabels"></canvas>
+                                          
+                                            <canvas id="doughnut" class="chart chart-doughnut"data="countryvalues" colour="{#F7464A,#46BFBD,#FDB45C,#878BB6}" labels="countrylabels"></canvas>
                                         </div>
                                     </div>
                                     <div class="col-xs-5">
