Implement filter datasource list by source_type
Turn datasource list page from a bootstrap modal to a normal page (route /myConnection), routable with a link.
Router parameters are enabled to filter the datasource list /myConnection/:source_type, so that the filter function can be implemented as a simple anchor tag.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'topnav';
 @import 'home';
 @import 'data-connect';
+@import 'my-connections';
 @import 'retweet-modal';
 @import 'copy-link-modal';
 @import 'search';
