--- a/app/views/data-connect/data-connect.html
+++ b/app/views/data-connect/data-connect.html
@@ -1,15 +1,10 @@
-<link rel="stylesheet" type="text/css" href="css/ng-tags-input.min.css">
-<link rel="stylesheet" type="text/css" href="css/ng-tags-input.bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.vertical-tabs.min.css">
 <div class="content-wrapper">
 
 	<div class="container-fluid content-container">
 		<div id="data-connect-panel">
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#data-connect-modal" ng-click="onUpdateDataSources()">My Connections</button>
+			<a type="button" class="btn btn-info btn-lg" ng-href="/myConnections">My Connections</a>
 
 			<a type="button" class="btn btn-default btn-lg" ng-href="/addConnection">Add Connection</a>
 		</div>
 	</div>
 </div>
-
-<div ng-include="'data-connect/data-connect-modal.html'"></div>
