Made divs scrollable

--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -92,18 +92,28 @@
     padding: 20% 0;
 }
 
+.wall-modal {
+    overflow-y: hidden !important;
+}
+
 .wall-modal-dialog,
 #data-connect-modal-dialog {
     width: 100%;
-    height: 95%;
+    height: 98%;
     margin-top: 10px;
-    padding: 0px 10px 0 10px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .wall-modal-content {
-    min-height: 100%;
+    height: 98%;
     border-radius: 25;
     width: 100%;
+}
+
+.wall-modal-body {
+    max-height: calc(100% - 140px);
+    overflow-y: scroll;
 }
 
 .mainhashtag-addon {
