Fix error when search map multiple time, search term still stay the same

--- a/app/views/advancedsearch.html
+++ b/app/views/advancedsearch.html
@@ -133,8 +133,8 @@
 			<!-- Map search -->
 			
 		</div>	
-		<div ng-show="advanced.mapSearch" class="advanced-search-map-wrapper search-map-wrapper">
-		    <div id="advanced-search-map" style="width:100%; height:100vh;"></div>
+		<div ng-show="advanced.mapSearch" class="advanced-search-map-wrapper map-container-parent">
+		    <div id="advanced-search-map"></div>
 		</div>	
 	</div>
 </div>
