--- a/app/views/map/tweetmap.html
+++ b/app/views/map/tweetmap.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper map-view">
+<div class="content-wrapper map-view map-container-parent">
    <div id="map"></div>
 
    <div class="activity-feed">
