--- a/app/views/search.html
+++ b/app/views/search.html
@@ -61,8 +61,8 @@
                
             </div>
              <!-- Map result -->
-            <div ng-show="search.showMap" class="search-map-wrapper">
-                <div id="search-map" style="width:100%; height:100vh;"></div>
+            <div ng-show="search.showMap" class="search-map-wrapper map-container-parent">
+                <div id="search-map"></div>
             </div>
 
             <!-- Right content: Other statistics -->
