Display harvesting freq as a select input
Adapt change from server which limits harvesting_freq to limited values

--- a/app/styles/_my-connections.scss
+++ b/app/styles/_my-connections.scss
@@ -126,6 +126,14 @@
 	background-color: inherit;
 	border: none;
 	cursor: text;
+	padding-left: 4px;
+}
+
+#datasource-table select:disabled {
+	background-color: white;
+	-webkit-appearance: inherit;
+	border: none;
+	cursor: text;
 }
 
 @media (max-width: 990px) {
