--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -77,6 +77,9 @@
         <div class="modal-body">
             <div class="modal-tweet-form-container">
                 <textarea name="tweet" id="tweet" cols="30" rows="5" class="form-control" ng-model="root.tweet" ng-change="root.tweetLengthCalculate()"></textarea>
+                <!-- <input type="text" name="latitude" id="latitude" ng-model="root.latitude" id="mapLat">
+                <input type="text" name="longitude" id="longitude" ng-model="root.longitude" id="mapLng"> -->
+                <div id="map" style="width: 100%; height: 450px;"></div>
             </div>
         </div>
         <div class="modal-footer">
@@ -108,7 +111,8 @@
               </select> -->
             </div>
             </span>
-
+            <input type="button" class="fa btn btn-info btn-flat pull-left" onclick="setMapTile()" id="attachMap" value="&#xf041; Attach Map">&nbsp;
+            <input type="button" class="fa btn btn-info btn-flat pull-left" onclick="cancelMapTile()" id="CancelMap" value="&#xf041; Cancel Map">&nbsp;
             <input type="submit" class="fa fa-twitter btn btn-info btn-flat" value="&#xf099; Tweet">&nbsp;
         </div>
         </form>
@@ -138,6 +142,9 @@
   </div>
 </div>
 <script>
+
+var latitude;
+var longitude;
 
 $(document).click(function(){
  $("#subDropDownMenu").hide('slow'); 
@@ -182,6 +189,76 @@ $("#subDropDownMenu").click(function(e){
       reader.readAsDataURL(f);
     }
   }
+
+  var tempArray = [];
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } 
+
+  function showPosition(position) {
+    latitude = position.coords.latitude;
+    longitude = position.coords.longitude;
+    tempArray.push(latitude);
+    tempArray.push(longitude);
+    sendPositionDetails(latitude, longitude);
+  }
+
+  $("#map").hide();
+  $("#CancelMap").hide();
+
+  var popup = L.popup();
+  var new_event_marker;
+  L.Icon.Default.imagePath = '/images/';
+
+  function onMapClick(e) {
+    console.log(e);
+    if(typeof(new_event_marker)==='undefined')
+    {
+      new_event_marker = new L.marker(e.latlng,{bounceOnAdd: true}).addTo(map); 
+      map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
+      latitude = e.latlng.lat;
+      longitude = e.latlng.lng;
+      sendPositionDetails(latitude, longitude);
+    }
+    else 
+    {
+      new_event_marker.setLatLng(e.latlng);  
+      map.panTo(new L.LatLng(e.latlng.lat, e.latlng.lng));
+      latitude = e.latlng.lat;
+      longitude = e.latlng.lng;
+      sendPositionDetails(latitude, longitude);
+    }
+  }
+
+  console.log(latitude + ',' + longitude);
+  var map = L.map('map').setView([17.22121, -79.122121], 12);
+
+  L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 18,
+    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors'
+  }).addTo(map);
+
+  function setMapTile() {
+    $("#map").show();
+    $("#CancelMap").show();
+    $("#attachMap").hide();
+  }
+
+  function cancelMapTile() {
+    $("#CancelMap").hide();
+    $("#map").hide();
+    $("#attachMap").show();
+  }
+
+  function sendPositionDetails (lat, lng) {
+    console.log("Called");
+    console.log(lat+','+lng);
+    $("#mapLat").val(lat);
+    $("#mapLng").val(lng);
+  }
+
+  map.on('click', onMapClick);
 
 document.getElementById('fileInput').addEventListener('change', handleFileSelect, false);
 
