--- a/app/views/topnav.html
+++ b/app/views/topnav.html
@@ -71,7 +71,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title" style="text-align:center">Post a tweet</h4>
+            <h4 class="modal-title" style="text-align:center">Compose New Tweet</h4>
         </div>
         <form role="form" id="tweet"  ng-submit="root.postTweet()"  enctype="multipart/form-data">
         <div class="modal-body">
@@ -88,8 +88,28 @@
                 <input type="file" id="fileInput" name="imageUpload" ng-model="root.imageUpload">&nbsp;&#xf030; Add Photo
             </span>
             <input type="button" class="fa btn btn-info btn-flat pull-left" ng-if="!root.locationName" ng-click="root.getLocation()" value="&#xf041; Get Location">&nbsp;
-            <input type="button" class="fa btn btn-info btn-flat pull-left" ng-if="root.locationName" value="&#xf041; {{root.locationName}}">&nbsp;
-            <input type="submit" class="btn btn-info btn-flat" value="Tweet">&nbsp;
+            <span class="pull-left">
+            <div class="dropdown" ng-if="root.locationName">
+              <button class="fa btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              &#xf041; {{root.locationName}}
+              <span class="caret"></span>
+              </button>
+              <ul class="fa dropdown-menu" aria-labelledby="dropdownMenu1" id="subDropDownMenu">
+                <li ng-repeat="loc in root.VariableLocations | limitTo:5"><a href="#" ng-click="root.setNewLocation($index)" class="fa">&#xf041; {{loc}}</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a ng-click="root.clearLocation()">Disable Location</a></li>
+              </ul>
+
+             <!--  <select class="fa dropdown-menu selectpicker" aria-labelledby="dropdownMenu1">
+                <option value="&#xf041; {{root.locationName}}">&#xf041; {{root.locationName}}</option>
+                <option ng-repeat="loc in root.VariableLocations | limitTo:5"><a href="#" ng-click="root.setNewLocation($index)" class="fa">&#xf041; {{loc}}</a></li>
+                <option role="separator" class="divider"></li>
+                <option><a ng-click="root.clearLocation()">Disable Location</a></li>
+              </select> -->
+            </div>
+            </span>
+
+            <input type="submit" class="fa fa-twitter btn btn-info btn-flat" value="&#xf099; Tweet">&nbsp;
         </div>
         </form>
     </div>
@@ -118,6 +138,22 @@
   </div>
 </div>
 <script>
+
+$(document).click(function(){
+ $("#subDropDownMenu").hide('slow'); 
+ reActivate();
+});
+
+$("#subDropDownMenu").click(function(e){
+  e.stopPropagation(); 
+});
+
+  function reActivate() {
+    $("#dropdownMenu1").click(function(e){
+      $("#subDropDownMenu").show('slow');
+    });
+  }
+
     function handleFileSelect(evt) {
     var files = evt.target.files; // FileList object
 
@@ -148,4 +184,5 @@
   }
 
 document.getElementById('fileInput').addEventListener('change', handleFileSelect, false);
+
 </script>
