--- a/app/styles/_wall.scss
+++ b/app/styles/_wall.scss
@@ -83,7 +83,7 @@
 }
 
 .tabs-left > li {
-    padding: 0;
+    padding-bottom: 10%;
     height: 33%;
 }
 
@@ -152,7 +152,6 @@
 }
 
 .wall-media-toggle {
-    padding-left: 30px;
     padding-top: 10px;
 }
 
