--- a/app/views/wall/wallCreationModal.html
+++ b/app/views/wall/wallCreationModal.html
@@ -8,14 +8,14 @@
             </div>
             <div class="modal-body wall-modal-body">
                 <div class="row">
-                    <div class="col-xs-2 tabs-list">
+                    <div class="col-xs-2 tabs-list" style="position:fixed;">
                         <ul class="nav nav-tabs tabs-left">
-                            <li class="active"><a href="#info" data-toggle="tab"><i class="fa fa-align-left fa-2x"></i><br><h4>INFO</h4></a></li>
-                            <li><a href="#content" data-toggle="tab"><i class="fa fa-filter fa-2x"></i><br><h4>CONTENT</h4></a></li>
-                            <li><a href="#design" data-toggle="tab"><i class="fa fa-paint-brush fa-2x"></i><br><h4>DESIGN</h4></a></li>
+                            <li ng-click="tabSelected(0)" class="active"><a href="#info" data-toggle="tab"><i class="fa fa-align-left fa-2x"></i><br><h4>INFO</h4></a></li>
+                            <li ng-click="tabSelected(1)"><a href="#content" data-toggle="tab"><i class="fa fa-filter fa-2x"></i><br><h4>CONTENT</h4></a></li>
+                            <li ng-click="tabSelected(2)"><a href="#design" data-toggle="tab"><i class="fa fa-paint-brush fa-2x"></i><br><h4>DESIGN</h4></a></li>
                         </ul>
                     </div>
-                    <div class="col-xs-10">
+                    <div class="col-xs-offset-2 col-xs-10">
                         <div class="tab-content">
                             <div class="tab-pane active" id="info">
                                 <div>
@@ -111,6 +111,26 @@
                                                     </toggle-switch>
                                                 </div>
                                                 <hr>
+                                                <div class="form-group">
+                                                    <h3>Which media do you want to show on the wall?</h3>
+                                                    <div class="row">
+                                                        <h4 class="col-xs-8">Images<br><small>Show tweets with images?</small></h4>
+                                                        <choices class="wall-media-toggle" data-type="array" btn-type="btn-default" ng-model="newWallOptions.images">
+                                                            <choice ng-disabled="newWallOptions.videos[0]=='only'" active value="both">Yes</choice>
+                                                            <choice ng-disabled="newWallOptions.videos[0]=='only'" value="none">No</choice>
+                                                            <choice ng-disabled="newWallOptions.videos[0]=='only'" value="only">Only</choice>
+                                                        </choices>
+                                                    </div>
+                                                    <hr>
+                                                    <div class="row">
+                                                        <h4 class="col-xs-8">Videos<br><small>Show tweets with videos?</small></h4>
+                                                        <choices class="wall-media-toggle" data-type="array" btn-type="btn-default" ng-model="newWallOptions.videos">
+                                                            <choice ng-disabled="newWallOptions.images[0]=='only'" active value="both">Yes</choice>
+                                                            <choice ng-disabled="newWallOptions.images[0]=='only'" value="none">No</choice>
+                                                            <choice ng-disabled="newWallOptions.images[0]=='only'" value="only">Only</choice>
+                                                        </choices>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="col-xs-6">
                                                 <div class="wall-float-container">
@@ -123,33 +143,38 @@
                                                     <tags-input class="wall-tag-input" ng-model="newWallOptions.none" placeholder="Type and hit enter" name="ands"></tags-input>
                                                 </div>
                                                 <div>
+                                                    <hr>
                                                     <div class="form-group row">
-                                                        <p class="col-xs-9">Block tweets with profanity
-                                                            <br><small>Tweets containing profanity will go straight into the blocked queue and will not be displayed or placed in moderation.</small></p>
+                                                        <h4 class="col-xs-9">Block tweets with profanity
+                                                            <br><small>Tweets containing profanity will go straight into the blocked queue and will not be displayed or placed in moderation.</small></h4>
                                                         <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.profanity">
                                                         </toggle-switch>
                                                     </div>
                                                     <h4>Coming Soon</h4>
+                                                    <hr>
                                                     <div class="form-group row wall-exclude-toggles">
-                                                        <p class="col-xs-9">Block retweets
-                                                            <br><small>Retweets will not be shown or counted in the stats, they'll be immediately blocked.</small></p>
+                                                        <h4 class="col-xs-9">Block retweets
+                                                            <br><small>Retweets will not be shown or counted in the stats, they'll be immediately blocked.</small></h4>
                                                         <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.blockRetweets">
                                                         </toggle-switch>
                                                     </div>
+                                                    <hr>
                                                     <div class="form-group row wall-exclude-toggles">
-                                                        <p class="col-xs-9">Hide retweets
-                                                            <br><small>Retweets will not be shown, but they WILL be counted in the stats and leaderboards.</small></p>
+                                                        <h4 class="col-xs-9">Hide retweets
+                                                            <br><small>Retweets will not be shown, but they WILL be counted in the stats and leaderboards.</small></h4>
                                                         <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.hideRetweets">
                                                         </toggle-switch>
                                                     </div>
+                                                    <hr>
                                                     <div class="form-group row wall-exclude-toggles">
-                                                        <p class="col-xs-9">Follower threshold
-                                                            <br><small>Block any Tweets from people that have less than the number of followers you specify.</small></p>
-                                                        <input disabled="true" class="col-xs-2" type="text" ng-model="newWallOptions.followerThreshold">
+                                                        <h4 class="col-xs-9">Follower threshold
+                                                            <br><small>Block any Tweets from people that have less than the number of followers you specify.</small></h4>
+                                                        <input style="min-width:100px;width:10%;" disabled="true" class="col-xs-2" type="text" ng-model="newWallOptions.followerThreshold">
                                                     </div>
+                                                    <hr>
                                                     <div class="form-group row wall-exclude-toggles">
-                                                        <p class="col-xs-9">Moderation
-                                                            <br><small>This gives you the ability to approve or deny every Tweet before it shows on your Tweet wall</small></p>
+                                                        <h4 class="col-xs-9">Moderation
+                                                            <br><small>This gives you the ability to approve or deny every Tweet before it shows on your Tweet wall</small></h4>
                                                         <toggle-switch disabled="true" class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.moderation">
                                                         </toggle-switch>
                                                     </div>
@@ -218,6 +243,18 @@
                                                                         <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.showStatistics">
                                                                         </toggle-switch>
                                                                     </div>
+                                                                    <div class="col-xs-6 form-group">
+                                                                        <label>Show Loklak logo</label>
+                                                                        <br>
+                                                                        <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.showLoklakLogo">
+                                                                        </toggle-switch>
+                                                                    </div>
+                                                                    <div class="col-xs-6 form-group">
+                                                                        <label>Show event name</label>
+                                                                        <br>
+                                                                        <toggle-switch class="wall-toggle-switch" on-label="YES" off-label="NO" ng-model="newWallOptions.showEventName">
+                                                                        </toggle-switch>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -229,10 +266,10 @@
                                                     <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-hashtag col-md-4">{{newWallOptions.mainHashtag}}</div>
                                                     <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-event-name col-md-4">
                                                         <div><img class="wall-preview-logo" ng-if="newWallOptions.logo" data-ng-src="data:{{newWallOptions.logo.filetype}};base64,{{newWallOptions.logo.base64}}">
-                                                            <div class="wall-header-eventname">{{newWallOptions.eventName}}</div>
+                                                            <div ng-hide="!newWallOptions.showEventName" class="wall-header-eventname">{{newWallOptions.eventName}}</div>
                                                         </div>
                                                     </div>
-                                                    <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-banner col-md-4">Loklak</div>
+                                                    <div ng-hide="!newWallOptions.showLoklakLogo" ng-style="{'color': newWallOptions.headerForeColour} " class="preview-banner col-md-4">Loklak</div>
                                                 </div>
                                                 <div class="row animate-switch-container" ng-switch on="newWallOptions.layoutStyle">
                                                     <img ng-switch-when="1" class="img-responsive animate-switch" src="/images/linear-layout.jpg" alt="">
@@ -244,10 +281,10 @@
                                                     <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-hashtag col-md-4">{{newWallOptions.mainHashtag}}</div>
                                                     <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-event-name col-md-4">
                                                         <div><img class="wall-preview-logo" ng-if="newWallOptions.logo" data-ng-src="data:{{newWallOptions.logo.filetype}};base64,{{newWallOptions.logo.base64}}">
-                                                            <div class="wall-header-eventname">{{newWallOptions.eventName}}</div>
+                                                            <div ng-hide="!newWallOptions.showEventName" class="wall-header-eventname">{{newWallOptions.eventName}}</div>
                                                         </div>
                                                     </div>
-                                                    <div ng-style="{'color': newWallOptions.headerForeColour} " class="preview-banner col-md-4">Loklak</div>
+                                                    <div ng-hide="!newWallOptions.showLoklakLogo" ng-style="{'color': newWallOptions.headerForeColour} " class="preview-banner col-md-4">Loklak</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -260,9 +297,12 @@
             </div>
             <div class="modal-footer">
                 <div style="float:left;" class="col-xs-offset-2">
-                    <a ng-click="proceed()" type="submit" class="btn btn-primary">Next Step</a>
-                    <a ng-click="proceed()" type="submit" class="btn btn-primary">Save and Close</a>
-                    <a ng-click="proceed()" type="submit" class="btn btn-primary">Close without saving</a>
+                    <a ng-show="showNext" ng-click="proceed()" type="submit" class="btn btn-default">Next Step</a>
+                    <!-- <a ng-click="proceed()" type="submit" class="btn btn-default">Save and Close</a>
+                    <a ng-click="proceed()" type="submit" class="btn btn-default">Close without saving</a> -->
+                </div>
+                <div style="float:right;">
+                    <a ng-disabled="!newWallOptions.mainHashtagText" type="submit" class="btn btn-primary" ng-click="!newWallOptions.mainHashtagText || start()">Start twitter wall</a>
                 </div>
             </div>
         </div>
