Display success & error message when edit or delete import profile

--- a/app/styles/_my-connections.scss
+++ b/app/styles/_my-connections.scss
@@ -23,12 +23,12 @@
 }
 
 /* overwrite admin.css */
-#add-datasource-form .alert-danger {
+#my-connection-panel.alert-danger {
 	background-color: #f2dede !important;
 	border-color: #ebccd1;
 	color: #a94442 !important;
 }
-#add-datasource-form .alert-success {
+#my-connection-panel .alert-success {
 	background-color: #dff0d8 !important;
 	border-color: #d6e9c6;
 	color: #3c763d !important;
