--- a/app/views/data-connect/add-connection.html
+++ b/app/views/data-connect/add-connection.html
@@ -17,11 +17,13 @@
 		<div class="row">
 			<div class="col-md-3"></div>
 			<div class="col-md-6" id="add-datasource-form">
-				<div ng-show="addForm.error" class="alert alert-danger">
+				<div ng-show="addForm.error" class="alert alert-danger alert-dismissible">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 					<span class="sr-only">Error : </span>{{addForm.error}}
 				</div>
-				<div ng-show="addForm.success" class="alert alert-success">
+				<div ng-show="addForm.success" class="alert alert-success alert-dismissible">
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 					  <span class="sr-only">Success : </span>{{addForm.success}}
 				</div>
